header: z-index fix, subtle opacity

--- a/app/static/sass/_header.sass
+++ b/app/static/sass/_header.sass
@@ -13,6 +13,8 @@ ul#menu
 header /* header bar styles */
   box-sizing: border-box
   position: fixed
+  z-index: 1
+  opacity: 0.95
   width: 100%
   background-color: $bg_dark
   font-size: 16px
